Hotfix: overflow style correction

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -58,6 +58,7 @@ h6, .h6 {
   align-items: center;
   width: 100vw;
   min-height: 100vh;
+  overflow-y: hidden;
   -webkit-box-shadow: inset 0 0 5rem rgba(0,0,0,.5);
           box-shadow: inset 0 0 5rem rgba(0,0,0,.5);
 }
